- added Spixi homescreen contact search - added Spixi homescreen tap to toggle balance display - fixed Spixi UI large text list item text overflow

--- a/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
+++ b/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
@@ -835,6 +835,8 @@ a:active {
     color: #000000;
     font-size: 10pt;
     margin-top: 18px;
+    width:100%;
+    overflow: hidden;
 }
 
 .spixi-list-item-subtitle {
